# hms-esp-apc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  apc_hid_parser.c  apc_hid_parser.h  http_server.c  http_server.h  main.c  mqtt_manager.c  mqtt_manager.h  usb_host_manager.c  usb_host_manager.h  wifi_manager.c  wifi_manager.h
