idf_component_register(
    SRCS
        "main.c"
        "wifi_manager.c"
        "mqtt_manager.c"
        "apc_hid_parser.c"
        "usb_host_manager.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        usb
    PRIV_REQUIRES
        mqtt
        esp_hid
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
)
